--- a/biodata.html
+++ b/biodata.html
@@ -30,19 +30,19 @@
         <table class="biodata-table">
             <tr>
                 <th>Full Name</th>
-                <td>Prajwal K</td>
+                <td>Omkar Nayaka</td>
             </tr>
             <tr>
                 <th>Father's Name</th>
-                <td>Kalinga Naik</td>
+                <td>Gopal nayaka</td>
             </tr>
             <tr>
                 <th>Mother's Name</th>
-                <td>Suma</td>
+                <td>Bhagyamma</td>
             </tr>
             <tr>
                 <th>Date of Birth</th>
-                <td>25 febrauary 2005</td>
+                <td>16 may 2005</td>
             </tr>
             <tr>
                 <th>Gender</th>
@@ -58,7 +58,7 @@
             </tr>
             <tr>
                 <th>Languages Known</th>
-                <td>English, Hindi, Kannada</td>
+                <td>English, Hindi, Kannada,Telugu</td>
             </tr>
             <tr>
                 <th>Address</th>
@@ -70,7 +70,7 @@
             </tr>
             <tr>
                 <th>Email</th>
-                <td>prajwalknaikdrr@gmail.com</td>
+                <td>omkarnayaka@gmail.com</td>
             </tr>
             <tr>
                 <th>Hobbies</th>
@@ -95,8 +95,9 @@
 
 <footer>
     <div class="container">
-        <p>&copy; <span id="year"></span>Prajwalk. All rights reserved.</p>
+        <p>&copy; <span id="year"></span>Omkar nayaka. All rights reserved.</p>
     </div>
 </footer>
-</body>
+</body> 
 </html>
+
