--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
     <div class="hero-text">
         <div class="hero-tagline">Computer Science Student</div>
-        <h2>Hi, I'm Prajwal</h2>
+        <h2>Hi, I'm Omkar</h2>
         <p>
             I am a Computer Science student with a strong interest in Web Development,
             Programming and software engineering. This website showcases my Resume and Bio-data.
@@ -63,8 +63,9 @@
 
 <footer>
     <div class="container">
-        <p>&copy; <span id="year"></span> Prajwalk. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> Omkar. All rights reserved.</p>
     </div>
 </footer>
 </body>
 </html>
+
