--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section class="hero">
     <div class="hero-text">
         <div class="hero-tagline">Computer Science Student</div>
+        <img src="image.jpg">
         <h2>Hi, I'm Omkar</h2>
         <p>
             I am a Computer Science student with a strong interest in Web Development,
@@ -68,4 +69,5 @@
 </footer>
 </body>
 </html>
+
 
