--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
     <div class="hero-text">
         <div class="hero-tagline">Computer Science Student</div>
-        <img src="image.jpg">
+        <img src="image.jpg" style="height:20px,width:10px">
         <h2>Hi, I'm Omkar</h2>
         <p>
             I am a Computer Science student with a strong interest in Web Development,
@@ -69,5 +69,6 @@
 </footer>
 </body>
 </html>
+
 
 
