--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js" defer></script>
+    <style>
+        .imgo{
+            height:200px;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -26,7 +31,7 @@
     <section class="hero">
     <div class="hero-text">
         <div class="hero-tagline">Computer Science Student</div>
-        <img src="image.jpg" style="height:20px,width:10px">
+        <img src="image.jpg" id="imgo">
         <h2>Hi, I'm Omkar</h2>
         <p>
             I am a Computer Science student with a strong interest in Web Development,
@@ -69,6 +74,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
